--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,7 +18,7 @@ jobs:
       
       - name: Build with Gradle
         run: |
-          chmod -x gradlew
+          chmod +x gradlew
           ./gradlew build
       
       - name: Cache Build
