fix :: wait the other action

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -83,6 +83,7 @@ jobs:
             rm ./production.env
   
   cleanup:
+    needs: ["build", "publish"]
     runs-on: ubuntu-latest
     steps:
       - name: adapttive/cache-delete
